validator-back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validator-back
  labels:
    app: validator-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: validator-back
  template:
    metadata:
      labels:
        app: validator-back
    spec:
      containers:
      - name: validator-back
        image: 992122884453.dkr.ecr.eu-west-1.amazonaws.com/jumia-phone-validator-back:0158275
        imagePullPolicy: Always
        limits:
        ports:
        - containerPort: 8080
