validator-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-validator-back
spec:
  type: ClusterIP
  ports:
    - name: port-80
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: validator-back
